if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(lus2gvorb)
  add_executable(lus2gvorb lus2gvorb.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CONFIG_DIR} extension=GvOrb description=\"Molcas orbital data\" backward=lus2gvorb.exe  \n")
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(lus2gvorb.exe)
  add_executable(lus2gvorb.exe lus2gvorb.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CMAKE_INSTALL_PREFIX}/bin extension=GvOrb description=\"Molcas orbital data\" backward=lus2gvorb.exe  \n")
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS lus2gvorb DESTINATION ${CONFIG_DIR})
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS lus2gvorb.exe DESTINATION bin)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
