if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(molden2lus)
  add_executable(molden2lus molden2lus.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CONFIG_DIR} extension=molden description=molden forward=molden2lus.exe  \n")
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(molden2lus.exe)
  add_executable(molden2lus.exe molden2lus.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CMAKE_INSTALL_PREFIX}/bin extension=molden description=molden forward=molden2lus.exe  \n")
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS molden2lus DESTINATION ${CONFIG_DIR})
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS molden2lus.exe DESTINATION bin)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
