if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(gv2xyz)
  project(xyz2gv)
  add_executable(gv2xyz gv2xyz.c)
  add_executable(xyz2gv xyz2gv.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CONFIG_DIR} extension=xyz description=\"xyz cartesian coordinates\" forward=xyz2gv.exe backward=gv2xyz.exe \n")
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  project(gv2xyz.exe)
  project(xyz2gv.exe)
  add_executable(gv2xyz.exe gv2xyz.c)
  add_executable(xyz2gv.exe xyz2gv.c)
  file(APPEND ${TMP_CONFIG_DIR}/plugin.rc "  libpath=${CMAKE_INSTALL_PREFIX}/bin extension=xyz description=\"xyz cartesian coordinates\" forward=xyz2gv.exe backward=gv2xyz.exe \n")
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS gv2xyz DESTINATION ${CONFIG_DIR})
  install(TARGETS xyz2gv DESTINATION ${CONFIG_DIR})
else(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  install(TARGETS gv2xyz.exe DESTINATION bin)
  install(TARGETS xyz2gv.exe DESTINATION bin)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
